add font family and use it

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,16 @@
       crossorigin="anonymous"
     />
 
+    <!-- add font style -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>ToDo App</title>
+    <link rel="stylesheet" href="../src/index.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
